--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8082
-MONGODB_URL=mongodb://127.0.0.1:27017/xflix
+MONGODB_URL=mongodb+srv://belindalumam:belindalumam@xflix-node.6zwdbty.mongodb.net/
 NODE_ENV=development
