--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8082
-MONGODB_URL=mongodb+srv://belindalumam:belindalumam@xflix-node.6zwdbty.mongodb.net/
+MONGODB_URL=mongodb+srv://belindalumam:belindalumam@xflix-node.6zwdbty.mongodb.net/xflix-node
 NODE_ENV=development
